katars/tests/snaps/snapshots/snap_errors__span_nested_call.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"print(undefined_var)\")"
---
Error: undefined variable 'undefined_var'
   ╭─[<test>:1:7]
   │
 1 │ print(undefined_var)
   │       ──────┬──────  
   │             ╰──────── undefined variable 'undefined_var'
───╯
